# ouma

./: AI.md  Cargo.toml  LICENSE.headers  README.md
src/: lib.rs  macros.rs  panic.rs  types.rs
src/arch/: mod.rs
src/arch/arm/: types.rs  va_list.rs
src/arch/arm64/: mod.rs  types.rs  va_list.rs
src/arch/riscv32/: types.rs  va_list.rs
src/arch/riscv64/: types.rs
src/arch/s390x/: types.rs  va_list.rs
src/arch/sparc64/: types.rs
src/arch/x86/: types.rs  va_list.rs
src/arch/x86_64/: types.rs  va_list.rs
src/std/: mod.rs
src/std/errno/: mod.rs
src/std/locale/: available.rs  mod.rs
src/std/stdio/: constants.rs
src/std/stdlib/: constants.rs  mod.rs
src/std/string/: mod.rs
src/std/strings/: mod.rs
src/std/uchar/: mod.rs
src/std/wchar/: constants.rs  mbstate.rs  mod.rs
src/support/: mod.rs
src/support/ffi/: mod.rs  va_list.rs
src/support/float/: f128.rs  intel_extended.rs  math.rs  mod.rs  rounding_mode.rs
src/support/locale/: mod.rs
src/support/locale/collate/: mod.rs
src/support/locale/ctype/: mod.rs
src/support/locale/ctype/casemap/: icu.rs
src/support/locale/ctype/converter/: utf8.rs
src/support/locale/messages/: arabic.rs  basque.rs  belarusian_cyrillic.rs  belarusian_latin.rs  breton.rs  catalan.rs  croatian.rs  czech.rs  danish.rs  dutch.rs  estonian.rs  finnish.rs  french.rs  galician.rs  german.rs  greek.rs  hakka.rs  hebrew.rs  hokkien_hans.rs  hungarian.rs  icelandic.rs  irish.rs  italian.rs  japanese.rs  korean.rs  limburgish.rs  low_german.rs  luxemburgish.rs  maltese.rs  mandarin_china_singapore.rs  mandarin_taiwan.rs  manx.rs  mod.rs  norwegian.rs  occitan.rs  persian.rs  polish.rs  romansh.rs  russian.rs  slovakian.rs  (+9 more)
src/support/locale/monetary/: mod.rs  static_data.rs
src/support/locale/numeric/: mod.rs
src/support/locale/time/: mod.rs
src/support/string/: cbuf.rs  error.rs  mod.rs
src/support/string/conversion/: clinger.rs  detailed_powers_of_ten.rs  ftoa.rs  itoa.rs  mod.rs  ryu.rs  ryu_table.rs  strtofloat.rs  strtoint.rs
src/support/sync/: critical_section.rs  mod.rs
src/support/traits/: char.rs  float.rs  mod.rs
tests/: common.h  common_locale.h  common_mbstate.h  ctype_wctype.cc  locale.cc  string.cc  strings.cc  uchar.cc  wchar.cc
