[package]
name = "strogino"
version = "0.0.0"
edition = "2024"
rust-version = "1.94.0"

[lib]
name = "c"
crate-type = ["staticlib", "cdylib"]

[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"

[dependencies]
atomic_refcell = "0.1.13"
bstr = { version = "1.12.0", default-features = false, features = ["alloc"] }
cbitset = "0.2"
critical-section = { version = "1.2.0", default-features = false, features = ["restore-state-bool"] }
dlmalloc = { version = "0.2", default-features = false, features = ["global"] }
icu_calendar = "2.2"
icu_casemap = { version = "2.2", default-features = false, features = ["compiled_data"] }
icu_collator = { version = "2.2", default-features = false, features = ["compiled_data"] }
icu_datetime = { version = "2.2", default-features = false, features = ["compiled_data"] }
icu_decimal = { version = "2.2", default-features = false, features = ["compiled_data"] }
icu_experimental = { version = "0.5", default-features = false, features = ["compiled_data"] }
icu_locale = { version = "2.2", default-features = false, features = ["compiled_data"] }
icu_properties = { version = "2.2", default-features = false, features = ["compiled_data"] }
icu_provider = { version = "2.2", default-features = false, features = ["logging"] }
icu_time = "2.2"
num-traits = { version = "0.2", default-features = false, features = ["libm"] }
once_cell = { version = "1.21.0", default-features = false, features = ["critical-section"] }
smallvec = { version = "1.15.1", default-features = false, features = ["const_new", "const_generics"] }
spin = { version = "0.10", default-features = false, features = ["spin_mutex", "mutex", "lock_api"] }
strum = { version = "0.28", default-features = false, features = ["derive"] }
strum_macros = "0.28"
syscalls = { version = "0.8", default-features = false }
tinystr = "0.8"
unicode-normalization = { version = "0.1.25", default-features = false }
writeable = "0.6"
