[package]
name = "ouma"
version = "0.0.0"
edition = "2024"
rust-version = "1.94.0"

[lib]
name = "c"
#crate-type = ["staticlib", "cdylib"]
crate-type = ["staticlib"]

[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"
debug = true

[features]
default = []
use_futex_lock = []

[dependencies]
atomic_refcell = "0.1"
bnum = { version = "0.14", default-features = false, features = ["numtraits"] }
bstr = { version = "1.12", default-features = false, features = ["alloc"] }
cbitset = "0.2"
critical-section = { version = "1.2", default-features = false, features = ["restore-state-bool"] }
dlmalloc = { version = "0.2", default-features = false, features = ["global"] }
icu_calendar = "2.2"
icu_casemap = { version = "2.2", default-features = false, features = ["compiled_data"] }
icu_collator = { version = "2.2", default-features = false, features = ["compiled_data"] }
icu_datetime = { version = "2.2", default-features = false, features = ["compiled_data"] }
icu_decimal = { version = "2.2", default-features = false, features = ["compiled_data"] }
icu_experimental = { version = "0.5", default-features = false, features = ["compiled_data"] }
icu_locale = { version = "2.2", default-features = false, features = ["compiled_data"] }
icu_properties = { version = "2.2", default-features = false, features = ["compiled_data"] }
icu_provider = { version = "2.2", default-features = false, features = ["logging"] }
icu_time = "2.2"
libm = "0.2"
lock_api = "0.4"
num-traits = { version = "0.2", default-features = false, features = ["i128"] }
once_cell = { version = "1.21", default-features = false, features = ["critical-section"] }
smallvec = { version = "1.15", default-features = false, features = ["const_new", "const_generics"] }
strum = { version = "0.28", default-features = false, features = ["derive"] }
strum_macros = "0.28"
syscalls = { version = "0.8", default-features = false }
tinystr = "0.8"
unicode-normalization = { version = "0.1.25", default-features = false }
writeable = "0.6"
